# bevy_game

./: Cargo.toml  content.py  fixbleed.py  uses.md
assets/textures/.source/: Fence.pxo  Slime.pxo  fence_tilemap.pxo  path_tilemap.pxo  slime_idle.pxo  slime_tilemap.pxo  slime_walk.pxo  tile.pxo
assets/textures/player/: compress.py
config/: global.toml  health.toml  navigation.toml  player.toml  playground.toml  red_slime.toml
config/debug/: settings.toml
config/default/: value_bar.toml
config/global/: display.toml
config/navigation/: navigation.toml  visual.toml
config/ui/: value_bar.toml
src/: macros.rs  main.rs
src/components/: animations.rs  behavior.rs  core.rs  markers.rs  mod.rs  pathfinding.rs
src/core/: animation.rs  blob_tilemap.rs  config.rs  debug_log.rs  dto.rs  extensions.rs  make_spritesheet.rs  mod.rs
src/core/macros/: bevy_alias.rs  bevy_custom.rs  mod.rs  state_machine.rs
src/core/navigation/: astar.rs  grid_builder.rs  grid_updater.rs  mod.rs  nav_grid.rs  pathfinding.rs  state.rs  visualize.rs
src/entities/: mod.rs
src/entities/player/: animation.rs  behavior.rs  brain.rs  handle_input.rs  health_input.rs  mod.rs  state.rs  summon.rs
src/entities/playground/: mod.rs  spawn_fences.rs  spawn_ground.rs  spawn_paths.rs  state.rs
src/entities/red_slime/: animation.rs  behavior.rs  brain.rs  mod.rs  state.rs  summon.rs  utils.rs
src/modules/: mod.rs
src/modules/health/: bundles.rs  components.rs  mod.rs  systems.rs
src/modules/value_bar/: components.rs  config.rs  (+2 more)
src/resources/: behavior.rs
src/systems/: mod.rs
(+18 files in other folders)
