[package]
name = "bevy_game"
version = "0.1.0"
edition = "2024"
default-run = "bevy_game"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
avian2d = "0.6.1"
bevy = { version = "0.18.1", features = ["dynamic_linking"] }
bevy_spritesheet_animation = "6.1.0"
paste = "1.0.15"
